Fix footer max-width to avoid too much stretching

--- a/main.css
+++ b/main.css
@@ -243,6 +243,11 @@ body > footer {
   background-color: #2C5686;
   background-color: var(--blue-accent-4);
   color: white;
+}
+
+.footer-content {
+  max-width: 1080px;
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
